<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="48dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/indication_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"/>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/keyboard_button_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_login_state"
                android:text="@string/pass_number_1"
                style="@style/KeyboardButton"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/keyboard_button_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_login_state"
                android:text="@string/pass_number_2"
                style="@style/KeyboardButton"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/keyboard_button_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_login_state"
                android:text="@string/pass_number_3"
                style="@style/KeyboardButton"/>

        </TableRow>


        <TableRow
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/keyboard_button_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_login_state"
                android:text="@string/pass_number_4"
                style="@style/KeyboardButton"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/keyboard_button_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_login_state"
                android:text="@string/pass_number_5"
                style="@style/KeyboardButton"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/keyboard_button_6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_login_state"
                android:text="@string/pass_number_6"
                style="@style/KeyboardButton"/>

        </TableRow>



        <TableRow
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/keyboard_button_7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_login_state"
                android:text="@string/pass_number_7"
                style="@style/KeyboardButton"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/keyboard_button_8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_login_state"
                android:text="@string/pass_number_8"
                style="@style/KeyboardButton"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/keyboard_button_9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_login_state"
                android:text="@string/pass_number_9"
                style="@style/KeyboardButton"/>

        </TableRow>


        <TableRow
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/fingerprint_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/img_content_desc"
                android:gravity="center_horizontal"
                android:padding="7dp"
                app:srcCompat="@drawable/ic_fingerprint" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/keyboard_button_0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_login_state"
                android:text="@string/pass_number_0"
                style="@style/KeyboardButton"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/del_number_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:contentDescription="@string/img_content_desc"
                app:srcCompat="@drawable/ic_backspace_blue"
                android:layout_weight="1"/>

        </TableRow>


    </TableLayout>


</androidx.appcompat.widget.LinearLayoutCompat>